--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
 
 
 			<form action="https://wp.zybooks.com/form-viewer.php" method="POST">
-				<label for="fullName"> Full Name<span class="required">*</span>: </label>
-				<input id="fullName" type="text" required> 
+				<label for="firstName"> First Name: <span class="required">*</span>: </label>
+				<input id="firstName" type="text" autocomplete="given-name" required> 
+				<label for="lastName"> Last Name: <span class="required">*</span>: </label>
+				<input id="lastName" type="text" autocomplete="family-name" required> 
 				<label for="email"> Email Address<span class="required">*</span>: </label>
-				<input id="email" type="email" required> 
+				<input id="email" type="email" autocomplete="email" required> 
 				<label for="phone"> Phone Number<span class="required">*</span>: </label>
-				<input id="phone" type="tel" required> 
+				<input id="phone" type="tel" autocomplete="on" required> 
 				<fieldset>
 					<legend>Preferred Contact Method<span class="required">*</span>:</legend> 
 					<input type="radio" name="contactChoice" id="emailChoice" value="Email" checked="checked">
